fix ie8 scroll jump

--- a/less/matching.less
+++ b/less/matching.less
@@ -213,8 +213,12 @@
 	}
 }
 
-
 .accessibility.no-touch .matching-component .matching-widget.disabled .select2-container.select2-container--focus,
 .accessibility.no-touch .matching-widget.disabled .select2.select2-container *:focus {
 	outline: 0;
+}
+
+// fixes IE8 scrolling jump issue when item focused 
+.select2-search__field {
+	position: fixed;
 }
